@@ -458,7 +458,7 @@ checksum=a2aa73fa3b
 format=js
 minified=1
 [sass:sass/main.scss]
-checksum=a265e55dd6
+checksum=0edddeac21
 format=css
 minified=0
 [sass-min:sass/main.scss]
