@@ -1,6 +1,6 @@
 .convos-create-dialog .autocomplete {
   a {
-    padding: 0.3rem;
+    padding: 0.3rem 0;
     border-bottom: 1px solid $dropdown-hover-bg-color;
     display: block;
 
