@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 0.99_25 Not Released
  - Fix sending server messages to the right dialog
+ - Add better handling of "create dialog" errors
 
 0.99_24 2017-01-29T00:57:30+0100
  - Fix registration process
